Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2145

Options dialog does not set name of Qt version automatically when entering path in edit

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • Qt Creator 2.1.0
    • Qt Creator 2.0.0, Qt Creator 2.0.1
    • All Other Issues
    • None
    • Windows Vista x64
    • 953be6fc0797864aa1cf2dc7557450235b25389e

    Description

      When I add a new Qt version in the Options dialog and type the path to its qmake.exe into the edit, Creator does not display a name for this version automatically.
      If I click on "Browse..." and select qmake.exe there, Creator assigns a name for this version, e. g. "4.6.3". The same should happen when I type the path.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes