Update Qt name when a qmake path is given

* Update the Qt name when entering the path to qmake via the text edit.
   Behaviour matches what used to happen when selecting qmake via
   the file browser now.

Task-number: QTCREATORBUG-2145